[FIX] knowledge: remove extra space on embedded views
This commit removes the extra space on the right side of an embedded view.
The extra space was added in https://github.com/odoo/enterprise/commit/3f5487f89e27, but we don't need that space for
comments in the case of embedded views. Therefore, we are removing it.

Task-3619543

closes odoo/enterprise#52901

X-original-commit: e9e545c1302b57a9b448348b046f6852d64733d9

--- a/knowledge/static/src/components/behaviors/embedded_view_behavior/embedded_view_manager.scss
+++ b/knowledge/static/src/components/behaviors/embedded_view_behavior/embedded_view_manager.scss
@@ -10,7 +10,7 @@
 
 .o_knowledge_behavior_type_embedded_view {
     margin-left: calc(-1 * var(--editor-gutter-size));
-    margin-right: calc(-1 * var(--editor-gutter-size));
+    margin-right: calc(-1 * var(--editor-gutter-size) - 2rem);
     position: relative;
     background-color: $o-webclient-background-color;
     border-left: 2px solid transparent; // adjust to resizer
